updated-vterm-docs

--- a/info/docs.texi
+++ b/info/docs.texi
@@ -18991,7 +18991,7 @@ VTERM == vterm using native vterm library
 @itemize
 @item Turn on @code{emacspeak-comint-autospeak} for using  the
 shell.
-@itemize Turn off @code{emacspeak-comint-autospeak} when using
+@item Turn off @code{emacspeak-comint-autospeak} when using
 full-screen ncurses apps like @code{vi}.
 @item Use @code{vterm-copy-mode} to review the contents of the
 terminal @MDash{} @kbd{C-c C-t}.
